# HF_cpp_latest

./: .gitignore  CMakeLists.txt  Makefile  Makefile_  T_vs_U_sus.py  build.sh  colormap.py  fock.cpp  hartree_Bethe_lattice.cpp  main.cpp  main_plot_ladder_parts.cpp  main_plot_ladder_parts_lambda_parallel.cpp  params.json  plotOnSpot.sh
src/: fft.cpp  fft.h  green_utils.cpp  green_utils.h  integral_utils.cpp  integral_utils.h  json_utils.cpp  json_utils.h  susceptibility_utils.cpp  susceptibility_utils.h  thread_utils.cpp  thread_utils.h
